Fix overflowing contents

--- a/src/styles/components/contents-view/_body.scss
+++ b/src/styles/components/contents-view/_body.scss
@@ -3,6 +3,7 @@
   flex: 1;
 
   position: relative;
+  height: 100%;
   background-color: lighten($black, 8%);
 
   .signIn {
